--- a/signature-generator/index.html
+++ b/signature-generator/index.html
@@ -10,6 +10,18 @@
 
 <link rel="stylesheet" href="styles.36e4aac54d3fdbca4ce5.css"></head>
 <body>
+  
   <app-root></app-root>
+ 
+ <script>
+    (function(){
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script> 
+  
 <script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.df1101cc1e7b588877f8.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.2aea2d3d5f285dbe88f7.js" type="module"></script><script src="main-es5.2aea2d3d5f285dbe88f7.js" nomodule defer></script></body>
 </html>
